// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with background dark 1`] = `
<div>
  <div
    class="sc-gsnTZi ZExqI"
  >
    <section
      class="sc-bczRLJ eEOUOS"
    >
      <h1>
        Children
      </h1>
    </section>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background light 1`] = `
<div>
  <div
    class="sc-gsnTZi kWredu"
  >
    <section
      class="sc-bczRLJ eEOUOS"
    >
      <h1>
        Children
      </h1>
    </section>
  </div>
</div>
`;
